# tracing-chrome

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: push_pull.yml  release.yml
benches/: overhead.rs
examples/: fibonacci.rs
src/: lib.rs
