[package]
name = "tracing-chrome"
version = "0.7.0"

authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
categories = ["asynchronous", "development-tools::debugging", "development-tools::profiling"]
description = "A Layer for tracing-subscriber that outputs Chrome-style traces."
documentation = "https://docs.rs/tracing-chrome"
edition = "2018"
keywords = ["profiling", "tracing", "flamegraph", "subscriber"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thoren-d/tracing-chrome"

[dependencies]
crossbeam-channel = "0.5.6"
json = "0.12.4"
tracing = "0.1.21"
tracing-subscriber = "0.3.1"


[dev-dependencies]
criterion = "0.3.5"
rayon = "1.5.2"


[[bench]]
name = "overhead"
harness = false
