[package]
name = "tracing-chrome"
version = "0.7.0"

authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
categories = ["asynchronous", "development-tools::debugging", "development-tools::profiling"]
description = "A Layer for tracing-subscriber that outputs Chrome-style traces."
documentation = "https://docs.rs/tracing-chrome"
edition = "2018"
keywords = ["profiling", "tracing", "flamegraph", "subscriber"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thoren-d/tracing-chrome"

[dependencies]
serde_json = "1.0.91"
tracing-core = "0.1.30"
tracing-subscriber = "0.3.16"


[dev-dependencies]
criterion = "0.4.0"
rayon = "1.5.3"
tracing = "0.1.37"


[[bench]]
name = "overhead"
harness = false
