[package]
name = "tracing-chrome"
version = "0.7.2"

authors = ["Thoren Paulson <thoren.paulson@gmail.com>"]
categories = ["asynchronous", "development-tools::debugging", "development-tools::profiling"]
description = "A Layer for tracing-subscriber that outputs Chrome-style traces."
documentation = "https://docs.rs/tracing-chrome"
edition = "2018"
keywords = ["profiling", "tracing", "flamegraph", "subscriber"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thoren-d/tracing-chrome"

exclude = ["/doc"]

[dependencies]
serde_json = "1.0.114"
tracing-core = "0.1.32"
tracing-subscriber = "0.3.18"


[dev-dependencies]
criterion = "0.5.1"
rayon = "1.9.0"
tracing = "0.1.40"


[[bench]]
name = "overhead"
harness = false
